--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoTransversal
 excludes=
+file.reference.jcalendar-1.4.jar=E:\\Documentos\\Conectores JDBC\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=E:\\Documentos\\Conectores JDBC\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.5.6.jar=D:\\Downloads\\mariadb-java-client-3.5.6.jar
 file.reference.mysql-connector-j-8.0.33.jar=E:\\Documentos\\Conectores JDBC\\mysql-connector-j-8.0.33.jar
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.1.4.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
