--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoTransversal
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\Documentos\\Conectores JDBC\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\MSI\\Desktop\\drivers\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.1.4.jar=E:\\Documentos\\Conectores JDBC\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\MSI\\Desktop\\drivers\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.5.6.jar=D:\\Downloads\\mariadb-java-client-3.5.6.jar
 file.reference.mysql-connector-j-8.0.33.jar=E:\\Documentos\\Conectores JDBC\\mysql-connector-j-8.0.33.jar
+file.reference.mysql-connector-j-8.0.33.jar-1=C:\\Users\\MSI\\Desktop\\drivers\\mysql-connector-j-8.0.33.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=E:\\Documentos\\Conectores JDBC\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar-1=C:\\Users\\MSI\\Desktop\\drivers\\mysql-connector-java-5.1.46-bin.jar
 file.reference.mysql-connector-java-8.0.17.jar=E:\\Documentos\\Conectores JDBC\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Users\\MSI\\Desktop\\drivers\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +52,12 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-1}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
